财富管理： 初始化系统模块