@@ -22,8 +22,7 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class PlanServiceTest {
 
-    @Mock
-    private PlanRepository planRepository;
+    @Mock private PlanRepository planRepository;
 
     private PlanService service;
 
@@ -32,47 +31,60 @@ class PlanServiceTest {
         service = new PlanService(planRepository);
     }
 
-    // 2.1 create
-
     @Test
-    void create_withConditions_savesPlan() {
+    void create_buyPlan_savesPlanWithPlanType() {
         ConditionDTO.CreateRequest condReq = ConditionDTO.CreateRequest.builder()
                 .conditionType(ConditionType.PRICE)
-                .direction(TradeDirection.BUY)
                 .targetPrice(new BigDecimal("10.00"))
                 .build();
-        ConditionDTO.CreateRequest condReq2 = ConditionDTO.CreateRequest.builder()
-                .conditionType(ConditionType.MA)
-                .direction(TradeDirection.SELL)
-                .maPeriod(5)
-                .build();
-
         PlanDTO.CreateRequest request = PlanDTO.CreateRequest.builder()
-                .name("测试预案")
+                .name("测试买入预案")
                 .stockCode("000001")
                 .cycle(PlanCycle.DAILY)
-                .conditions(Arrays.asList(condReq, condReq2))
+                .planType(PlanType.BUY)
+                .condition(condReq)
                 .build();
 
         when(planRepository.save(any(Plan.class))).thenAnswer(inv -> {
             Plan p = inv.getArgument(0);
-            setField(p, "id", 1L);
+            if (p.getId() == null) setField(p, "id", 2L);
             return p;
         });
 
         PlanDTO.Response resp = service.create(request);
 
         assertNotNull(resp.getId());
-        assertEquals(2, resp.getConditions().size());
-        verify(planRepository, times(1)).save(any(Plan.class));
+        assertEquals(PlanType.BUY, resp.getPlanType());
+        assertNotNull(resp.getCondition());
     }
 
     @Test
-    void create_withoutConditions_succeeds() {
+    void create_buyPlan_setsTradePlanId() {
+        PlanDTO.CreateRequest request = PlanDTO.CreateRequest.builder()
+                .name("测试")
+                .stockCode("000001")
+                .cycle(PlanCycle.DAILY)
+                .planType(PlanType.BUY)
+                .build();
+
+        when(planRepository.save(any(Plan.class))).thenAnswer(inv -> {
+            Plan p = inv.getArgument(0);
+            setField(p, "id", 5L);
+            return p;
+        });
+
+        PlanDTO.Response resp = service.create(request);
+
+        assertEquals(5L, resp.getTradePlanId());
+    }
+
+    @Test
+    void create_withoutCondition_succeeds() {
         PlanDTO.CreateRequest request = PlanDTO.CreateRequest.builder()
                 .name("无条件预案")
                 .stockCode("000001")
                 .cycle(PlanCycle.DAILY)
+                .planType(PlanType.BUY)
                 .build();
 
         when(planRepository.save(any(Plan.class))).thenAnswer(inv -> {
@@ -82,21 +94,21 @@ class PlanServiceTest {
         });
 
         PlanDTO.Response resp = service.create(request);
-        assertEquals(0, resp.getConditions().size());
+        assertNull(resp.getCondition());
     }
 
     @Test
     void create_invalidMaPeriod_throws() {
         ConditionDTO.CreateRequest condReq = ConditionDTO.CreateRequest.builder()
                 .conditionType(ConditionType.MA)
-                .direction(TradeDirection.BUY)
-                .maPeriod(7) // invalid
+                .maPeriod(7)
                 .build();
         PlanDTO.CreateRequest request = PlanDTO.CreateRequest.builder()
                 .name("测试")
                 .stockCode("000001")
                 .cycle(PlanCycle.DAILY)
-                .conditions(List.of(condReq))
+                .planType(PlanType.BUY)
+                .condition(condReq)
                 .build();
 
         BusinessException ex = assertThrows(BusinessException.class, () -> service.create(request));
@@ -107,14 +119,14 @@ class PlanServiceTest {
     void create_priceZeroOrNegative_throws() {
         ConditionDTO.CreateRequest condReq = ConditionDTO.CreateRequest.builder()
                 .conditionType(ConditionType.PRICE)
-                .direction(TradeDirection.BUY)
                 .targetPrice(BigDecimal.ZERO)
                 .build();
         PlanDTO.CreateRequest request = PlanDTO.CreateRequest.builder()
                 .name("测试")
                 .stockCode("000001")
                 .cycle(PlanCycle.DAILY)
-                .conditions(List.of(condReq))
+                .planType(PlanType.BUY)
+                .condition(condReq)
                 .build();
 
         BusinessException ex = assertThrows(BusinessException.class, () -> service.create(request));
@@ -122,59 +134,82 @@ class PlanServiceTest {
     }
 
     @Test
-    void create_priceTargetNull_throws() {
-        ConditionDTO.CreateRequest condReq = ConditionDTO.CreateRequest.builder()
-                .conditionType(ConditionType.PRICE)
-                .direction(TradeDirection.BUY)
-                .targetPrice(null)
-                .build();
-        PlanDTO.CreateRequest request = PlanDTO.CreateRequest.builder()
-                .name("测试")
-                .stockCode("000001")
-                .cycle(PlanCycle.DAILY)
-                .conditions(List.of(condReq))
+    void createSellPlan_buyNotHolding_throws() {
+        Plan buyPlan = TestFixtures.planBuilder()
+                .id(1L)
+                .planType(PlanType.BUY)
+                .status(PlanStatus.PENDING)
                 .build();
 
-        BusinessException ex = assertThrows(BusinessException.class, () -> service.create(request));
-        assertTrue(ex.getMessage().contains("大于 0"));
+        when(planRepository.findById(1L)).thenReturn(Optional.of(buyPlan));
+
+        ConditionDTO.CreateRequest condReq = ConditionDTO.CreateRequest.builder()
+                .conditionType(ConditionType.PRICE)
+                .targetPrice(new BigDecimal("11.00"))
+                .build();
+        PlanDTO.CreateSellPlanRequest request = PlanDTO.CreateSellPlanRequest.builder()
+                .buyPlanId(1L)
+                .name("测试卖出")
+                .cycle(PlanCycle.DAILY)
+                .condition(condReq)
+                .build();
+
+        BusinessException ex = assertThrows(BusinessException.class, () -> service.createSellPlan(request));
+        assertEquals(400, ex.getStatusCode());
+        assertTrue(ex.getMessage().contains("尚未建仓"));
     }
 
     @Test
-    void create_conditionTypeNull_throws() {
-        ConditionDTO.CreateRequest condReq = ConditionDTO.CreateRequest.builder()
-                .conditionType(null)
-                .direction(TradeDirection.BUY)
-                .targetPrice(new BigDecimal("10.00"))
-                .build();
-        PlanDTO.CreateRequest request = PlanDTO.CreateRequest.builder()
-                .name("测试")
-                .stockCode("000001")
+    void createSellPlan_buyNotExist_throws404() {
+        when(planRepository.findById(999L)).thenReturn(Optional.empty());
+
+        PlanDTO.CreateSellPlanRequest request = PlanDTO.CreateSellPlanRequest.builder()
+                .buyPlanId(999L)
+                .name("测试卖出")
                 .cycle(PlanCycle.DAILY)
-                .conditions(List.of(condReq))
                 .build();
 
-        assertThrows(BusinessException.class, () -> service.create(request));
+        BusinessException ex = assertThrows(BusinessException.class, () -> service.createSellPlan(request));
+        assertEquals(404, ex.getStatusCode());
     }
 
     @Test
-    void create_directionNull_throws() {
+    void createSellPlan_buyHolding_success() {
+        Plan buyPlan = TestFixtures.planBuilder()
+                .id(1L)
+                .planType(PlanType.BUY)
+                .status(PlanStatus.HOLDING)
+                .stockCode("000001")
+                .stockName("平安银行")
+                .executionQuantity(new BigDecimal("100"))
+                .cycle(PlanCycle.DAILY)
+                .build();
+
+        when(planRepository.findById(1L)).thenReturn(Optional.of(buyPlan));
+        when(planRepository.findByPlanTypeAndStatusNot(eq(PlanType.SELL), any())).thenReturn(List.of());
+        when(planRepository.save(any(Plan.class))).thenAnswer(inv -> {
+            Plan p = inv.getArgument(0);
+            setField(p, "id", 2L);
+            return p;
+        });
+
         ConditionDTO.CreateRequest condReq = ConditionDTO.CreateRequest.builder()
                 .conditionType(ConditionType.PRICE)
-                .direction(null)
-                .targetPrice(new BigDecimal("10.00"))
+                .targetPrice(new BigDecimal("11.00"))
                 .build();
-        PlanDTO.CreateRequest request = PlanDTO.CreateRequest.builder()
-                .name("测试")
-                .stockCode("000001")
+        PlanDTO.CreateSellPlanRequest request = PlanDTO.CreateSellPlanRequest.builder()
+                .buyPlanId(1L)
+                .name("测试卖出")
                 .cycle(PlanCycle.DAILY)
-                .conditions(List.of(condReq))
+                .condition(condReq)
                 .build();
 
-        BusinessException ex = assertThrows(BusinessException.class, () -> service.create(request));
-        assertTrue(ex.getMessage().contains("direction"));
-    }
+        PlanDTO.Response resp = service.createSellPlan(request);
 
-    // 2.2 update
+        assertEquals(PlanType.SELL, resp.getPlanType());
+        assertEquals(1L, resp.getTradePlanId());
+        assertEquals(1L, resp.getBuyPlanId());
+    }
 
     @Test
     void update_pendingPlan_succeeds() {
@@ -182,25 +217,18 @@ class PlanServiceTest {
         when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
         when(planRepository.save(any(Plan.class))).thenReturn(plan);
 
-        PlanDTO.UpdateRequest request = PlanDTO.UpdateRequest.builder()
-                .name("新名称")
-                .build();
-
-        PlanDTO.Response resp = service.update(1L, request);
-        verify(planRepository, atLeastOnce()).save(any(Plan.class));
+        PlanDTO.Response resp = service.update(1L, PlanDTO.UpdateRequest.builder().name("新名称").build());
+        assertEquals("新名称", plan.getName());
     }
 
     @Test
-    void update_holdingPlan_throws409() {
+    void update_holdingPlan_succeeds() {
         Plan plan = TestFixtures.planBuilder().status(PlanStatus.HOLDING).build();
         when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
+        when(planRepository.save(any(Plan.class))).thenReturn(plan);
 
-        PlanDTO.UpdateRequest request = PlanDTO.UpdateRequest.builder()
-                .name("新名称")
-                .build();
-
-        BusinessException ex = assertThrows(BusinessException.class, () -> service.update(1L, request));
-        assertEquals(409, ex.getStatusCode());
+        PlanDTO.Response resp = service.update(1L, PlanDTO.UpdateRequest.builder().name("持仓中改名").build());
+        assertEquals("持仓中改名", plan.getName());
     }
 
     @Test
@@ -224,35 +252,102 @@ class PlanServiceTest {
     }
 
     @Test
-    void update_partialFields_onlyUpdatesNonNull() {
-        Plan plan = TestFixtures.planBuilder().name("原名称").cycle(PlanCycle.DAILY).build();
+    void update_pendingPlan_editsCondition_maToPrice() {
+        Plan plan = TestFixtures.planBuilder().status(PlanStatus.PENDING).build();
+        PlanCondition existingCond = TestFixtures.conditionBuilder()
+                .plan(plan)
+                .conditionType(ConditionType.MA)
+                .maPeriod(20)
+                .build();
+        plan.getConditions().add(existingCond);
         when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
         when(planRepository.save(any(Plan.class))).thenReturn(plan);
 
-        PlanDTO.UpdateRequest request = PlanDTO.UpdateRequest.builder()
-                .name("新名称")
+        ConditionDTO.CreateRequest newCond = ConditionDTO.CreateRequest.builder()
+                .conditionType(ConditionType.PRICE)
+                .targetPrice(new BigDecimal("12.00"))
                 .build();
+        PlanDTO.Response resp = service.update(1L, PlanDTO.UpdateRequest.builder().condition(newCond).build());
 
-        service.update(1L, request);
-        assertEquals("新名称", plan.getName());
-        assertEquals(PlanCycle.DAILY, plan.getCycle());
+        assertEquals(ConditionType.PRICE, existingCond.getConditionType());
+        assertNull(existingCond.getMaPeriod());
+        assertEquals(new BigDecimal("12.00"), existingCond.getTargetPrice());
     }
 
     @Test
-    void update_cycleChanged_succeeds() {
-        Plan plan = TestFixtures.planBuilder().cycle(PlanCycle.DAILY).build();
+    void update_pendingPlan_editsCondition_priceToMa() {
+        Plan plan = TestFixtures.planBuilder().status(PlanStatus.PENDING).build();
+        PlanCondition existingCond = TestFixtures.conditionBuilder()
+                .plan(plan)
+                .conditionType(ConditionType.PRICE)
+                .targetPrice(new BigDecimal("10.00"))
+                .build();
+        plan.getConditions().add(existingCond);
         when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
         when(planRepository.save(any(Plan.class))).thenReturn(plan);
 
-        PlanDTO.UpdateRequest request = PlanDTO.UpdateRequest.builder()
-                .cycle(PlanCycle.WEEKLY)
+        ConditionDTO.CreateRequest newCond = ConditionDTO.CreateRequest.builder()
+                .conditionType(ConditionType.MA)
+                .maPeriod(10)
                 .build();
+        service.update(1L, PlanDTO.UpdateRequest.builder().condition(newCond).build());
 
-        service.update(1L, request);
-        assertEquals(PlanCycle.WEEKLY, plan.getCycle());
+        assertEquals(ConditionType.MA, existingCond.getConditionType());
+        assertEquals(10, existingCond.getMaPeriod());
+        assertNull(existingCond.getTargetPrice());
     }
 
-    // 2.3 delete
+    @Test
+    void update_pendingPlan_createsCondition_whenNoneExists() {
+        Plan plan = TestFixtures.planBuilder().status(PlanStatus.PENDING).build();
+        when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
+        when(planRepository.save(any(Plan.class))).thenReturn(plan);
+
+        ConditionDTO.CreateRequest newCond = ConditionDTO.CreateRequest.builder()
+                .conditionType(ConditionType.MA)
+                .maPeriod(60)
+                .build();
+        PlanDTO.Response resp = service.update(1L, PlanDTO.UpdateRequest.builder().condition(newCond).build());
+
+        assertEquals(1, plan.getConditions().size());
+        assertEquals(ConditionType.MA, plan.getConditions().get(0).getConditionType());
+        assertEquals(60, plan.getConditions().get(0).getMaPeriod());
+    }
+
+    @Test
+    void update_holdingPlan_editsCondition_succeeds() {
+        Plan plan = TestFixtures.planBuilder().status(PlanStatus.HOLDING).build();
+        PlanCondition existingCond = TestFixtures.conditionBuilder()
+                .plan(plan)
+                .conditionType(ConditionType.PRICE)
+                .targetPrice(new BigDecimal("1800"))
+                .build();
+        plan.getConditions().add(existingCond);
+        when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
+        when(planRepository.save(any(Plan.class))).thenReturn(plan);
+
+        ConditionDTO.CreateRequest newCond = ConditionDTO.CreateRequest.builder()
+                .conditionType(ConditionType.PRICE)
+                .targetPrice(new BigDecimal("2000"))
+                .build();
+        PlanDTO.Response resp = service.update(1L, PlanDTO.UpdateRequest.builder().condition(newCond).build());
+
+        assertEquals(new BigDecimal("2000"), existingCond.getTargetPrice());
+    }
+
+    @Test
+    void update_invalidMaPeriod_throws() {
+        Plan plan = TestFixtures.planBuilder().status(PlanStatus.PENDING).build();
+        when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
+
+        ConditionDTO.CreateRequest invalidCond = ConditionDTO.CreateRequest.builder()
+                .conditionType(ConditionType.MA)
+                .maPeriod(7)
+                .build();
+        BusinessException ex = assertThrows(BusinessException.class,
+                () -> service.update(1L, PlanDTO.UpdateRequest.builder().condition(invalidCond).build()));
+        assertTrue(ex.getMessage().contains("MA"));
+    }
 
     @Test
     void delete_pendingPlan_succeeds() {
@@ -279,27 +374,7 @@ class PlanServiceTest {
 
         BusinessException ex = assertThrows(BusinessException.class, () -> service.delete(1L));
         assertEquals(409, ex.getStatusCode());
-        verify(planRepository, never()).delete(any());
     }
-
-    @Test
-    void delete_closedPlan_throws409() {
-        Plan plan = TestFixtures.planBuilder().status(PlanStatus.CLOSED).build();
-        when(planRepository.findById(1L)).thenReturn(Optional.of(plan));
-
-        BusinessException ex = assertThrows(BusinessException.class, () -> service.delete(1L));
-        assertEquals(409, ex.getStatusCode());
-    }
-
-    @Test
-    void delete_notFound_throws404() {
-        when(planRepository.findById(999L)).thenReturn(Optional.empty());
-
-        BusinessException ex = assertThrows(BusinessException.class, () -> service.delete(999L));
-        assertEquals(404, ex.getStatusCode());
-    }
-
-    // 2.4 list
 
     @Test
     void list_noFilters_callsFindAll() {
@@ -316,29 +391,19 @@ class PlanServiceTest {
     }
 
     @Test
-    void list_stockCodeFilter_callsFindByStockCode() {
-        when(planRepository.findByStockCode("000001")).thenReturn(List.of());
-        service.list(null, "000001", null);
-        verify(planRepository).findByStockCode("000001");
+    void list_tradePlanId_callsFindByTradePlanId() {
+        when(planRepository.findByTradePlanId(5L)).thenReturn(List.of());
+        service.list(null, null, 5L);
+        verify(planRepository).findByTradePlanId(5L);
     }
-
-    @Test
-    void list_bothFilters_callsFindByStatusAndStockCode() {
-        when(planRepository.findByStatusAndStockCode(PlanStatus.PENDING, "000001")).thenReturn(List.of());
-        service.list(PlanStatus.PENDING, "000001", null);
-        verify(planRepository).findByStatusAndStockCode(PlanStatus.PENDING, "000001");
-    }
-
-    // 2.5 findActivePlans
 
     @Test
     void findActivePlans_returnsPendingAndHolding() {
         when(planRepository.findByStatusIn(anyList())).thenReturn(List.of());
         service.findActivePlans();
-        verify(planRepository).findByStatusIn(Arrays.asList(PlanStatus.PENDING, PlanStatus.HOLDING));
+        verify(planRepository).findByStatusIn(List.of(PlanStatus.PENDING, PlanStatus.HOLDING));
     }
 
-    // Utility
     private void setField(Object target, String fieldName, Object value) {
         try {
             java.lang.reflect.Field f = target.getClass().getDeclaredField(fieldName);
